--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,8 @@
 *,
-*::after,
 *::before {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
-}
-
-html {
-  font-size: 62.5%;
 }
 
 body {
@@ -16,7 +11,7 @@ body {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Arial", sans-serif;
   color: #15DEA5;
   font-size: 2rem;
   font-weight: 100;
@@ -24,20 +19,20 @@ body {
 }
 
 h1 {
-  font-family: "Roboto", sans-serif;
+  font-family: "Arial", sans-serif;
   font-weight: 900;
   font-size: 5rem;
   font-style: italic;
 }
 
 textarea {
-  font-family: "Roboto", sans-serif;
+  font-family: "Arial", sans-serif;
   font-weight: 100;
   font-size: 2rem;
 }
 
 button {
-  font-family: "Roboto", sans-serif;
+  font-family: "Arial", sans-serif;
   font-weight: 900;
   font-style: italic;
   font-size: 2.75rem;
@@ -57,6 +52,32 @@ button {
 .btn--full-width {
   width: 100%;
   margin: 0 auto;
+}
+
+.container {
+  margin: 6rem;
+  padding: 1.5rem 1.5rem 0 1.5rem;
+  border: 0.1rem solid #D6FFF5;
+}
+
+.subcontainer {
+  overflow-x: auto;
+}
+
+.caroussel {
+  width: 1600px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.movieMiniature {
+  display: inline;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.highlightMovie {
+  display: block;
 }
 
 .header {
@@ -99,229 +120,28 @@ button {
   color: #fff;
 }
 
-.container {
-  margin: 6rem;
-  padding: 1.5rem 1.5rem 0 1.5rem;
-  border: 0.1rem solid #D6FFF5;
+.overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 2;
 }
 
-.form {
-  width: 100%;
-  padding-bottom: 1.5rem;
-}
-.form__heading {
-  width: 100%;
-  color: #fff;
-  text-shadow: 0.55rem 0.55rem #11af82;
-  background: #15DEA5;
-  line-height: 5rem;
-  padding: 1.5rem;
-}
-.form__field label {
-  color: #D6FFF5;
-  display: block;
-  font-size: 2rem;
-  line-height: 2rem;
-  padding-top: 1.5rem;
-}
-.form__field input {
-  width: 100%;
-  background: #001534;
-  border: 0.1rem solid #15DEA5;
-  padding: 1.5rem;
-  color: #D6FFF5;
-  font-weight: 900;
-  font-style: italic;
-  font-size: 2.75rem;
-  border: 0.1rem solid #15DEA5;
+.infoWindow {
+  height: 90%;
+  width: 90%;
+  margin: auto;
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  border-radius: 15px;
   background-color: #001534;
-  color: #15DEA5;
-}
-.form__field textarea {
-  width: 100%;
-  color: #15DEA5;
-  background: #001534;
-  border: 0.1rem solid #15DEA5;
-  outline: none;
-  padding: 1.5rem;
-  margin-bottom: 0.75rem;
-}
-
-.quote {
-  text-align: right;
-  font-size: 6rem;
-  font-weight: 900;
-  font-style: italic;
-  color: #D6FFF5;
-  margin: 2rem 6rem -3rem 6rem;
-}
-.quote strong {
-  color: #15DEA5;
-}
-
-.proj-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 1.5rem;
-}
-
-.proj-prev {
-  color: #fff;
-  margin-bottom: 1.5rem;
-}
-.proj-prev__image {
-  margin: 0;
-  opacity: 0.2;
-  width: 100%;
-  display: block;
-  overflow: hidden;
-  padding-top: 56.25%;
-  position: relative;
-}
-.proj-prev__image img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  transform: translate(-50%, -50%);
-}
-.proj-prev__heading {
-  font-size: 4rem;
-  padding-left: 2.5rem;
-  margin: 0;
-  line-height: 6rem;
-}
-.proj-prev__byline {
-  padding-left: 2.5rem;
-  font-size: 1.66rem;
-}
-.proj-prev:hover {
-  cursor: pointer;
-}
-.proj-prev:hover > .proj-prev__heading {
-  background: #15DEA5;
-}
-.proj-prev:hover > .proj-prev__image {
-  opacity: 1;
-}
-
-.about {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 2fr 5fr;
-  grid-template-rows: repeat(3, auto);
-  padding: 1.5rem;
-  grid-template-areas: "imagery heading" "imagery copy" "imagery btn";
-  margin-bottom: 1.5rem;
-}
-.about__heading {
-  grid-area: heading;
-  color: #fff;
-  text-shadow: 0.55rem 0.55rem #11af82;
-  text-align: right;
-  padding-right: 1.5rem;
-}
-.about__imagery {
-  grid-area: imagery;
-}
-.about__pic {
-  overflow: hidden;
-  width: 80%;
-  border-radius: 1000rem;
-  border: 1.5rem solid #15DEA5;
-}
-.about__pic img {
-  display: block;
-  width: 100%;
-}
-.about__copy {
-  grid-area: copy;
-}
-.about__copy p {
-  line-height: 2.4rem;
-  margin-bottom: 3.375rem;
-}
-.about__btn {
-  padding: 1.5rem;
-  border: 0.1rem solid #15DEA5;
-  color: #15DEA5;
-  background: #001534;
-  cursor: pointer;
-  grid-area: btn;
-}
-.about__btn:hover {
-  background: #15DEA5;
-  color: #D6FFF5;
-}
-.about__btn--full-width {
-  width: 100%;
-  margin: 0 auto;
-}
-.about__btn a {
-  text-decoration: none;
-}
-
-.project {
-  width: 100%;
-  margin-bottom: 1.8rem;
-  display: grid;
-  grid-template-columns: 5fr 3fr;
-  grid-template-rows: repeat(3, auto);
-  grid-gap: 1.5rem;
-  grid-template-areas: "image synopsis" "tags synopsis" "btn btn";
-}
-.project__image {
-  grid-area: image;
-  width: 100%;
-  display: block;
-  overflow: hidden;
-  padding-top: 56.25%;
-  position: relative;
-}
-.project__image img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  transform: translate(-50%, -50%);
-}
-.project__synopsis {
-  grid-area: synopsis;
-  padding-left: 1.5rem;
-}
-.project__synopsis h1 {
-  color: #fff;
-  text-shadow: 0.55rem 0.55rem #11af82;
-}
-.project__synopsis p {
-  line-height: 2.5rem;
-}
-.project__tags {
-  grid-area: tags;
-}
-.project__tags p {
-  color: #fff;
-}
-.project__tags p strong {
-  color: #15DEA5;
-  font-weight: 900;
-  font-style: italic;
-}
-.project__btn {
-  padding: 1.5rem;
-  border: 0.1rem solid #15DEA5;
-  color: #15DEA5;
-  background: #001534;
-  cursor: pointer;
-  grid-area: btn;
-}
-.project__btn:hover {
-  background: #15DEA5;
-  color: #D6FFF5;
-}
-.project__btn--full-width {
-  width: 100%;
-  margin: 0 auto;
 }
 
 /*# sourceMappingURL=style.css.map */
