--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,12 +142,51 @@ button {
 .infoWindow {
   height: 90%;
   width: 90%;
+  padding: 1.5rem 1.5rem 0 1.5rem;
+  border: 0.1rem solid #D6FFF5;
   margin: auto;
   position: absolute;
   top: 5%;
   left: 5%;
   border-radius: 15px;
   background-color: #001534;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+}
+.infoWindow__img {
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+.infoWindow__title {
+  grid-column: 2/5;
+  grid-row: 1/2;
+}
+.infoWindow__title__line1, .infoWindow__title__line2 {
+  height: 50%;
+  width: 100%;
+}
+.infoWindow__informations {
+  grid-column: 2/5;
+  grid-row: 2/3;
+}
+.infoWindow__informations__line1, .infoWindow__informations__line2 {
+  height: 50%;
+  width: 100%;
+}
+.infoWindow__details {
+  grid-column: 1/5;
+  grid-row: 3/5;
+}
+.infoWindow__details__leftBlock {
+  height: 100%;
+  width: 50%;
+  float: left;
+}
+.infoWindow__details__rightBlock {
+  height: 100%;
+  width: 50%;
+  float: right;
 }
 
 h2 {
