--- a/public/css/style.css
+++ b/public/css/style.css
@@ -157,6 +157,10 @@ button {
 .infoWindow__img {
   grid-column: 1/2;
   grid-row: 1/3;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: 0.1rem solid #D6FFF5;
 }
 .infoWindow__title {
   grid-column: 2/5;
@@ -165,6 +169,8 @@ button {
 .infoWindow__title__line1, .infoWindow__title__line2 {
   height: 50%;
   width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 .infoWindow__informations {
   grid-column: 2/5;
@@ -173,20 +179,30 @@ button {
 .infoWindow__informations__line1, .infoWindow__informations__line2 {
   height: 50%;
   width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 .infoWindow__details {
   grid-column: 1/5;
   grid-row: 3/5;
 }
 .infoWindow__details__leftBlock {
-  height: 100%;
+  height: 90%;
   width: 50%;
   float: left;
+  border: 0.1rem solid #D6FFF5;
+  margin-top: 2%;
+  overflow: auto;
+  font-size: 24px;
 }
 .infoWindow__details__rightBlock {
-  height: 100%;
+  height: 90%;
   width: 50%;
   float: right;
+  border: 0.1rem solid #D6FFF5;
+  margin-top: 2%;
+  overflow: auto;
+  font-size: 24px;
 }
 
 h2 {
