--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,12 +8,12 @@
 
 body {
   box-sizing: border-box;
-  background: #f2f2f2;
+  background: #001534;
 }
 
 body {
   font-family: "Arial", sans-serif;
-  color: #333333;
+  color: #D6FFF5;
   font-size: 2rem;
   font-weight: 100;
   line-height: 1.7;
@@ -21,10 +21,12 @@ body {
 
 h1 {
   font-family: "Arial", sans-serif;
+  color: #001534;
   font-weight: 900;
   font-size: 5rem;
   font-style: italic;
   text-align: center;
+  text-shadow: 0.35rem 0.35rem #fff;
 }
 
 h2 {
@@ -56,41 +58,14 @@ button {
 .btn {
   background: transparent;
   border: none !important;
+  filter: invert(66%) sepia(79%) saturate(446%) hue-rotate(107deg) brightness(91%) contrast(98%);
   cursor: pointer;
 }
 .btn:hover {
-  filter: invert(16%) sepia(4%) saturate(213%) hue-rotate(316deg) brightness(95%) contrast(87%);
+  filter: invert(97%) sepia(49%) saturate(356%) hue-rotate(75deg) brightness(101%) contrast(105%);
 }
 .btn img {
   max-height: 8rem;
-}
-
-.arrow {
-  cursor: pointer;
-  display: inline-block;
-  height: 40px;
-  margin-left: 40px;
-  margin-right: 40px;
-  position: relative;
-  line-height: 2.5em;
-  padding-left: 1em;
-  padding-right: 2em;
-  background: white;
-  color: black;
-}
-.arrow:after {
-  border-left: 20px solid white;
-}
-
-.arrow:after {
-  content: "";
-  position: absolute;
-  border-bottom: 20px solid transparent;
-  border-top: 20px solid transparent;
-  height: 0px;
-  width: 0px;
-  margin-right: -20px;
-  right: 0;
 }
 
 .container {
@@ -99,12 +74,12 @@ button {
 
 .frontPageMovie {
   height: 25rem;
-  margin-left: 0;
-  margin-right: 0;
-  background-color: #c4c4c4;
+  margin-left: 2%;
+  margin-right: 2%;
+  background-color: #15DEA5;
+  box-shadow: -6px 12px 8px 0 rgba(255, 255, 255, 0.2);
 }
 .frontPageMovie__leftBlock {
-  padding-left: 2rem;
   height: 100%;
   width: 30%;
   float: left;
@@ -131,6 +106,14 @@ button {
 .frontPageMovie__rightBlock__line2__btn {
   margin-top: 2rem;
   margin-left: 40%;
+  background-color: #001534;
+  color: #D6FFF5;
+  padding: 0.5rem;
+  border-radius: 8px;
+}
+.frontPageMovie__rightBlock__line2__btn:hover {
+  background-color: #002a67;
+  color: #fff;
 }
 .frontPageMovie__rightBlock__line3 {
   width: 100%;
@@ -146,7 +129,7 @@ button {
 .subcontainer {
   overflow-x: hidden;
   width: 70%;
-  border: 0.1rem solid #333333;
+  border: 0.1rem solid #D6FFF5;
 }
 
 .caroussel {
@@ -166,7 +149,7 @@ button {
 }
 
 .header {
-  background: #c4c4c4;
+  background: #15DEA5;
   height: 10rem;
   display: flex;
   align-items: center;
@@ -189,10 +172,10 @@ button {
 }
 .nav__link a {
   text-decoration: none;
-  color: #333333;
+  color: #001534;
 }
 .nav__link a:hover {
-  color: #f2f2f2;
+  color: #D6FFF5;
 }
 
 .overlay {
@@ -212,13 +195,13 @@ button {
   height: 90%;
   width: 90%;
   padding: 1.5rem 1.5rem 0 1.5rem;
-  border: 0.1rem solid #333333;
+  border: 0.1rem solid #D6FFF5;
   margin: auto;
   position: absolute;
   top: 5%;
   left: 5%;
   border-radius: 15px;
-  background-color: #f2f2f2;
+  background-color: #001534;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
@@ -229,7 +212,7 @@ button {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border: 0.1rem solid #333333;
+  border: 0.1rem solid #D6FFF5;
 }
 .infoWindow__title {
   grid-column: 2/5;
@@ -266,7 +249,7 @@ button {
   height: 90%;
   width: 49%;
   float: left;
-  border: 0.1rem solid #333333;
+  border: 0.1rem solid #D6FFF5;
   border-radius: 15px;
   padding: 0.8rem;
   margin-top: 2%;
@@ -278,7 +261,7 @@ button {
   height: 90%;
   width: 49%;
   float: right;
-  border: 0.1rem solid #333333;
+  border: 0.1rem solid #D6FFF5;
   border-radius: 15px;
   padding: 0.8rem;
   margin-top: 2%;
