--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ body {
 body {
   font-family: "Arial", sans-serif;
   color: #D6FFF5;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 100;
   line-height: 1.7;
 }
@@ -31,6 +31,17 @@ h1 {
 
 h2 {
   font-family: "Arial", sans-serif;
+  color: #001534;
+  font-weight: 700;
+  font-size: 3rem;
+  font-style: italic;
+  text-align: center;
+  text-shadow: 0.35rem 0.35rem #fff;
+  line-height: 1;
+}
+
+h3 {
+  font-family: "Arial", sans-serif;
   font-size: 2rem;
   text-align: center;
   margin-bottom: 2rem;
@@ -45,7 +56,7 @@ textarea {
 .tooltiptext {
   font-family: "Arial", sans-serif;
   font-weight: 100;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 button {
@@ -192,15 +203,13 @@ button {
 }
 
 .infoWindow {
-  height: 90%;
+  height: 100%;
   width: 90%;
+  max-width: 1200px;
   padding: 1.5rem 1.5rem 0 1.5rem;
   border: 0.1rem solid #D6FFF5;
+  border-radius: 8px;
   margin: auto;
-  position: absolute;
-  top: 5%;
-  left: 5%;
-  border-radius: 15px;
   background-color: #001534;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -210,35 +219,57 @@ button {
   grid-column: 1/2;
   grid-row: 1/3;
   width: 100%;
+  max-width: 220px;
   height: 100%;
   object-fit: cover;
   border: 0.1rem solid #D6FFF5;
+  border-radius: 8px;
 }
 .infoWindow__title {
   grid-column: 2/5;
   grid-row: 1/2;
 }
 .infoWindow__title__line1, .infoWindow__title__line2 {
-  height: 50%;
   margin-left: 5%;
   width: 95%;
   display: flex;
   flex-direction: row;
   align-items: baseline;
   justify-content: space-between;
+  border: 0.1rem solid #D6FFF5;
+  border-radius: 8px;
+  margin-bottom: 1%;
+}
+.infoWindow__title__line1 {
+  height: 60%;
+  background-color: #15DEA5;
+  color: #001534;
+  padding: 1.5rem;
+}
+.infoWindow__title__line2 {
+  margin-top: 1%;
+  padding: 0.8rem;
 }
 .infoWindow__informations {
   grid-column: 2/5;
   grid-row: 2/3;
+  position: relative;
 }
 .infoWindow__informations__line1, .infoWindow__informations__line2 {
-  height: 50%;
+  padding: 0.8rem;
   margin-left: 5%;
   width: 95%;
   display: flex;
   flex-direction: row;
   align-items: baseline;
   justify-content: space-between;
+}
+.infoWindow__informations__line1 {
+  height: 50%;
+}
+.infoWindow__informations__line2 {
+  position: absolute;
+  bottom: 0;
 }
 .infoWindow__details {
   grid-column: 1/5;
@@ -250,11 +281,11 @@ button {
   width: 49%;
   float: left;
   border: 0.1rem solid #D6FFF5;
-  border-radius: 15px;
+  border-radius: 8px;
   padding: 0.8rem;
   margin-top: 2%;
   overflow: auto;
-  font-size: 24px;
+  font-size: 1.2rem;
   text-align: justify;
 }
 .infoWindow__details__rightBlock {
@@ -262,11 +293,11 @@ button {
   width: 49%;
   float: right;
   border: 0.1rem solid #D6FFF5;
-  border-radius: 15px;
+  border-radius: 8px;
   padding: 0.8rem;
   margin-top: 2%;
   overflow: auto;
-  font-size: 24px;
+  font-size: 1.2rem;
   text-align: justify;
 }
 
@@ -281,7 +312,7 @@ button {
   display: inline-block;
   font-size: var(--star-size);
   font-family: Times;
-  line-height: 1;
+  line-height: 2;
 }
 .Stars::before {
   content: "★★★★★";
