--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,7 +119,7 @@ button {
   margin-left: 40%;
   background-color: #001534;
   color: #D6FFF5;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
   border-radius: 8px;
 }
 .frontPageMovie__rightBlock__line2__btn:hover {
@@ -213,17 +213,18 @@ button {
   background-color: #001534;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: 0.8fr 1fr 1fr 1.2fr;
 }
 .infoWindow__img {
   grid-column: 1/2;
   grid-row: 1/3;
   width: 100%;
-  max-width: 220px;
+  max-width: 240px;
   height: 100%;
   object-fit: cover;
   border: 0.1rem solid #D6FFF5;
   border-radius: 8px;
+  box-shadow: 0 2px 4px 0 #fff, 0 2px 4px 0 #fff;
 }
 .infoWindow__title {
   grid-column: 2/5;
