--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,18 +206,37 @@ button {
   height: 100%;
   width: 90%;
   max-width: 1200px;
-  padding: 1.5rem 1.5rem 0 1.5rem;
+  padding: 0.3rem 1.5rem 0 1.5rem;
   border: 0.1rem solid #D6FFF5;
   border-radius: 8px;
   margin: auto;
   background-color: #001534;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 0.8fr 1fr 1fr 1.2fr;
+  grid-template-columns: 0.8fr 1fr 1fr 1.2fr;
+  grid-template-rows: 0.25fr repeat(4, 1fr);
+}
+.infoWindow__closebtndiv {
+  grid-column: 1/5;
+  grid-row: 1/2;
+  position: relative;
+}
+.infoWindow__closebtndiv__btn {
+  background-color: transparent;
+  border-color: transparent;
+  color: #15DEA5;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 2rem;
+  position: absolute;
+  right: 0;
+  transform: rotate(45deg);
+}
+.infoWindow__closebtndiv__btn:hover {
+  color: #D6FFF5;
 }
 .infoWindow__img {
   grid-column: 1/2;
-  grid-row: 1/3;
+  grid-row: 2/4;
   width: 100%;
   max-width: 240px;
   height: 100%;
@@ -228,7 +247,7 @@ button {
 }
 .infoWindow__title {
   grid-column: 2/5;
-  grid-row: 1/2;
+  grid-row: 2/3;
 }
 .infoWindow__title__line1, .infoWindow__title__line2 {
   margin-left: 5%;
@@ -253,7 +272,7 @@ button {
 }
 .infoWindow__informations {
   grid-column: 2/5;
-  grid-row: 2/3;
+  grid-row: 3/4;
   position: relative;
 }
 .infoWindow__informations__line1, .infoWindow__informations__line2 {
@@ -274,7 +293,7 @@ button {
 }
 .infoWindow__details {
   grid-column: 1/5;
-  grid-row: 3/5;
+  grid-row: 4/6;
   justify-content: space-between;
 }
 .infoWindow__details__leftBlock {
