--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,7 +143,7 @@ button {
   border: 0.1rem solid #D6FFF5;
 }
 
-.caroussel {
+.carousel {
   width: 1600px;
   display: flex;
   justify-content: space-evenly;
