--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,6 +79,93 @@ button {
   max-height: 8rem;
 }
 
+.navcontainer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.subcontainer {
+  overflow-x: hidden;
+  width: 70%;
+  border: 0.1rem solid #D6FFF5;
+}
+
+.carousel {
+  width: 1600px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.movieMiniature {
+  display: inline;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.Stars {
+  --percent: calc(var(--rating) / 5 * 100%);
+  display: inline-block;
+  font-size: var(35px);
+  font-family: Times;
+  line-height: 2;
+}
+.Stars::before {
+  content: "★★★★★";
+  letter-spacing: 3px;
+  background: linear-gradient(90deg, #fc0 var(--percent), #fff var(--percent));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  width: 200px;
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+.header {
+  background: #15DEA5;
+  height: 10rem;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.header__logo {
+  height: 150px;
+}
+
+.nav {
+  padding-right: 6rem;
+  flex: 2 1 auto;
+  text-align: right;
+}
+.nav__link {
+  display: inline;
+  font-size: 2rem;
+  padding-left: 1.5rem;
+}
+.nav__link a {
+  text-decoration: none;
+  color: #001534;
+}
+.nav__link a:hover {
+  color: #D6FFF5;
+}
+
 .container {
   margin: 6rem;
 }
@@ -129,64 +216,6 @@ button {
 .frontPageMovie__rightBlock__line3 {
   width: 100%;
   height: 40%;
-}
-
-.navcontainer {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.subcontainer {
-  overflow-x: hidden;
-  width: 70%;
-  border: 0.1rem solid #D6FFF5;
-}
-
-.carousel {
-  width: 1600px;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.movieMiniature {
-  display: inline;
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-.highlightMovie {
-  display: block;
-}
-
-.header {
-  background: #15DEA5;
-  height: 10rem;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 100%;
-}
-.header__logo {
-  height: 150px;
-}
-
-.nav {
-  padding-right: 6rem;
-  flex: 2 1 auto;
-  text-align: right;
-}
-.nav__link {
-  display: inline;
-  font-size: 2rem;
-  padding-left: 1.5rem;
-}
-.nav__link a {
-  text-decoration: none;
-  color: #001534;
-}
-.nav__link a:hover {
-  color: #D6FFF5;
 }
 
 .overlay {
@@ -319,45 +348,6 @@ button {
   overflow: auto;
   font-size: 1.2rem;
   text-align: justify;
-}
-
-:root {
-  --star-size: 35px;
-  --star-color: #fff;
-  --star-background: #fc0;
-}
-
-.Stars {
-  --percent: calc(var(--rating) / 5 * 100%);
-  display: inline-block;
-  font-size: var(--star-size);
-  font-family: Times;
-  line-height: 2;
-}
-.Stars::before {
-  content: "★★★★★";
-  letter-spacing: 3px;
-  background: linear-gradient(90deg, var(--star-background) var(--percent), var(--star-color) var(--percent));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  width: 200px;
-  /* Position the tooltip */
-  position: absolute;
-  z-index: 1;
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
 }
 
 /*# sourceMappingURL=style.css.map */
